@@ -43,29 +43,30 @@ import frysk.Config;
 
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
 import java.util.MissingResourceException;
 import java.util.PropertyResourceBundle;
 import java.util.ResourceBundle;
 
 public class Messages {
 	// Comment the first line and uncomment the second if running in eclipse
-	private static final String BUNDLE_NAME = Config.PKGDATADIR+"/messages.properties"; //$NON-NLS-1$
+	private static final String[] BUNDLE_PATHS = new String[] {Config.PKGDATADIR, Config.ABS_SRCDIR + "/../frysk-gui/frysk/gui/common"};
+	private static final String BUNDLE_NAME = "/messages.properties"; //$NON-NLS-1$
 //	private static final String BUNDLE_NAME = "frysk-gui/frysk/gui/common"+"/messages.properties"; //$NON-NLS-1$
 
 	private static ResourceBundle RESOURCE_BUNDLE;
 
 	static{
 		
-		try {
-			Messages.RESOURCE_BUNDLE = new PropertyResourceBundle(new FileInputStream(new File(BUNDLE_NAME)));
-		} catch (FileNotFoundException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+		for(int i = 0; i < BUNDLE_PATHS.length; i++){
+			try{
+				Messages.RESOURCE_BUNDLE = new PropertyResourceBundle(new FileInputStream(new File(BUNDLE_PATHS[i] + BUNDLE_NAME)));
+			}
+			catch (Exception e){
+				System.out.println("Failed for path "+BUNDLE_PATHS[i] + BUNDLE_NAME);
+				continue;
+			}
+			
+			break;
 		}
 	}
 	
