@@ -38,23 +38,7 @@
 // exception.
 package frysk.gui.test;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileReader;
-import java.math.BigInteger;
-
 import org.gnu.gtk.Gtk;
-import org.jdom.output.Format;
-import org.jdom.output.XMLOutputter;
-
-import frysk.Config;
-
-import frysk.gui.srcwin.SourceWindow;
-import frysk.gui.srcwin.StackLevel;
-import frysk.gui.srcwin.dom.DOMFrysk;
-import frysk.gui.srcwin.dom.DOMLine;
-import frysk.gui.srcwin.dom.DOMSource;
-import frysk.gui.srcwin.dom.DOMTestGUIBuilder;
 
 
 /**
@@ -70,53 +54,25 @@ public class SourceWinRunner {
 	public static void main(String[] args) throws Exception {
 		Gtk.init(args);
 		
-		DOMFrysk dom = DOMTestGUIBuilder.makeTestDOM();
-		DOMSource source = dom.getImage("test6").getSource("test3.cpp");
-		source.setFileName("test3.cpp");
-		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-		BufferedReader reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
-		int line = 1;
-		int offset = 0;
-		while(reader.ready()){
-			String text = reader.readLine()+"\n";
-			System.out.print(text);
-			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-			offset += text.length();
-		}
-		StackLevel stack1 = new StackLevel(source, 2);
-		
-		source = dom.getImage("test6").getSource("test4.cpp");
-		source.setFileName("test4.cpp");
-		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-		reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
-		line = 1;
-		offset = 0;
-		while(reader.ready()){
-			String text = reader.readLine()+"\n";
-			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-			offset += text.length();
-		}
-		StackLevel stack2 = new StackLevel(source, 2);
-		stack1.addNextScope(stack2);
-		
-		source = dom.getImage("test6").getSource("test5.cpp");
-		source.setFileName("test5.cpp");
-		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-		reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
-		line = 1;
-		offset = 0;
-		while(reader.ready()){
-			String text = reader.readLine()+"\n";
-			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-			offset += text.length();
-		}
-		StackLevel stack3 = new StackLevel(source, 2);
-		stack2.addNextScope(stack3);
-		
-		source = dom.getImage("test6").getSource("test6.cpp");
-		source.setFileName("test6.cpp");
-		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-//		reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test6.cpp")));
+//		DOMFrysk dom = DOMTestGUIBuilder.makeTestDOM();
+//		DOMSource source = dom.getImage("test6").getSource("test3.cpp");
+//		source.setFileName("test3.cpp");
+//		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//		BufferedReader reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
+//		int line = 1;
+//		int offset = 0;
+//		while(reader.ready()){
+//			String text = reader.readLine()+"\n";
+//			System.out.print(text);
+//			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
+//			offset += text.length();
+//		}
+//		StackLevel stack1 = new StackLevel(source, 2);
+//		
+//		source = dom.getImage("test6").getSource("test4.cpp");
+//		source.setFileName("test4.cpp");
+//		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//		reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
 //		line = 1;
 //		offset = 0;
 //		while(reader.ready()){
@@ -124,18 +80,46 @@ public class SourceWinRunner {
 //			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
 //			offset += text.length();
 //		}
-		StackLevel stack4 = new StackLevel(source, 10);
-		stack3.addNextScope(stack4);
-		
-		SourceWindow s = new SourceWindow(
-				new String[] {"frysk-gui/frysk/gui/glade/", 
-								Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/glade/",
-								Config.GLADEDIR},
-				new String[] {Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/images/", Config.PKGDATADIR+"/images"},
-				dom,
-				stack1);
-		
-		s.getClass();
+//		StackLevel stack2 = new StackLevel(source, 2);
+//		stack1.addNextScope(stack2);
+//		
+//		source = dom.getImage("test6").getSource("test5.cpp");
+//		source.setFileName("test5.cpp");
+//		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//		reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
+//		line = 1;
+//		offset = 0;
+//		while(reader.ready()){
+//			String text = reader.readLine()+"\n";
+//			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
+//			offset += text.length();
+//		}
+//		StackLevel stack3 = new StackLevel(source, 2);
+//		stack2.addNextScope(stack3);
+//		
+//		source = dom.getImage("test6").getSource("test6.cpp");
+//		source.setFileName("test6.cpp");
+//		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+////		reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test6.cpp")));
+////		line = 1;
+////		offset = 0;
+////		while(reader.ready()){
+////			String text = reader.readLine()+"\n";
+////			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
+////			offset += text.length();
+////		}
+//		StackLevel stack4 = new StackLevel(source, 10);
+//		stack3.addNextScope(stack4);
+//		
+//		SourceWindow s = new SourceWindow(
+//				new String[] {"frysk-gui/frysk/gui/glade/", 
+//								Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/glade/",
+//								Config.GLADEDIR},
+//				new String[] {Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/images/", Config.PKGDATADIR+"/images"},
+//				dom,
+//				stack1);
+//		
+//		s.getClass();
 		
 //		try {
 //			XMLOutputter outputter = new XMLOutputter(Format.getPrettyFormat());
@@ -150,81 +134,81 @@ public class SourceWinRunner {
 	public static void mainSourceWin(String[] args, String[] paths, String imageDir){
 		Gtk.init(args);
 		
-		StackLevel stack1 = null;
-		DOMFrysk dom = null;
-		
-		try{
-			dom = DOMTestGUIBuilder.makeTestDOM();
-			DOMSource source = dom.getImage("test6").getSource("test3.cpp");
-			source.setFileName("test3.cpp");
-			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-			BufferedReader reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
-			int line = 1;
-			int offset = 0;
-			while(reader.ready()){
-				String text = reader.readLine()+"\n";
-				System.out.print(text);
-				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-				offset += text.length();
-			}
-			stack1 = new StackLevel(source, 2);
-			
-			source = dom.getImage("test6").getSource("test4.cpp");
-			source.setFileName("test4.cpp");
-			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-			reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
-			line = 1;
-			offset = 0;
-			while(reader.ready()){
-				String text = reader.readLine()+"\n";
-				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-				offset += text.length();
-			}
-			StackLevel stack2 = new StackLevel(source, 2);
-			stack1.addNextScope(stack2);
-			
-			source = dom.getImage("test6").getSource("test5.cpp");
-			source.setFileName("test5.cpp");
-			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-			reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
-			line = 1;
-			offset = 0;
-			while(reader.ready()){
-				String text = reader.readLine()+"\n";
-				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-				offset += text.length();
-			}
-			StackLevel stack3 = new StackLevel(source, 2);
-			stack2.addNextScope(stack3);
-			
-			source = dom.getImage("test6").getSource("test6.cpp");
-			source.setFileName("test6.cpp");
-			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
-			DOMLine theLine = source.getLine(13);
-			theLine.addInlineInst("min", 12, 3);
-			theLine = source.getLine(14);
-			theLine.addInlineInst("min", 12, 3);
-			StackLevel stack4 = new StackLevel(source, 14);
-			stack3.addNextScope(stack4);
-		}
-		catch (Exception e){
-			e.printStackTrace();
-			System.exit(1);
-		}
-		
-		SourceWindow s = new SourceWindow(
-				paths, new String[] {imageDir},
-				dom,
-				stack1);
-		
-		s.getClass();
-		
-		try {
-			XMLOutputter outputter = new XMLOutputter(Format.getPrettyFormat());
-			outputter.output(dom.getDOMFrysk(), System.out);
-		} catch (java.io.IOException e) {
-			e.printStackTrace();
-		}
+//		StackLevel stack1 = null;
+//		DOMFrysk dom = null;
+//		
+//		try{
+//			dom = DOMTestGUIBuilder.makeTestDOM();
+//			DOMSource source = dom.getImage("test6").getSource("test3.cpp");
+//			source.setFileName("test3.cpp");
+//			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//			BufferedReader reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
+//			int line = 1;
+//			int offset = 0;
+//			while(reader.ready()){
+//				String text = reader.readLine()+"\n";
+//				System.out.print(text);
+//				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
+//				offset += text.length();
+//			}
+//			stack1 = new StackLevel(source, 2);
+//			
+//			source = dom.getImage("test6").getSource("test4.cpp");
+//			source.setFileName("test4.cpp");
+//			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//			reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
+//			line = 1;
+//			offset = 0;
+//			while(reader.ready()){
+//				String text = reader.readLine()+"\n";
+//				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
+//				offset += text.length();
+//			}
+//			StackLevel stack2 = new StackLevel(source, 2);
+//			stack1.addNextScope(stack2);
+//			
+//			source = dom.getImage("test6").getSource("test5.cpp");
+//			source.setFileName("test5.cpp");
+//			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//			reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
+//			line = 1;
+//			offset = 0;
+//			while(reader.ready()){
+//				String text = reader.readLine()+"\n";
+//				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
+//				offset += text.length();
+//			}
+//			StackLevel stack3 = new StackLevel(source, 2);
+//			stack2.addNextScope(stack3);
+//			
+//			source = dom.getImage("test6").getSource("test6.cpp");
+//			source.setFileName("test6.cpp");
+//			source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+//			DOMLine theLine = source.getLine(13);
+//			theLine.addInlineInst("min", 12, 3);
+//			theLine = source.getLine(14);
+//			theLine.addInlineInst("min", 12, 3);
+//			StackLevel stack4 = new StackLevel(source, 14);
+//			stack3.addNextScope(stack4);
+//		}
+//		catch (Exception e){
+//			e.printStackTrace();
+//			System.exit(1);
+//		}
+//		
+//		SourceWindow s = new SourceWindow(
+//				paths, new String[] {imageDir},
+//				dom,
+//				stack1);
+//		
+//		s.getClass();
+//		
+//		try {
+//			XMLOutputter outputter = new XMLOutputter(Format.getPrettyFormat());
+//			outputter.output(dom.getDOMFrysk(), System.out);
+//		} catch (java.io.IOException e) {
+//			e.printStackTrace();
+//		}
 		
 		Gtk.main();
 	}
